# pybind11-fmm

./: .gitignore  CLAUDE.md  CMakeLists.txt  Makefile  README.md  app.py  index.html  pyproject.toml
.github/workflows/: pip.yml  wheels.yml
src/: graph.cpp  graph.hpp  indexer.hpp  main.cpp  network.cpp  network.hpp  types.cpp  types.hpp  utils.cpp  utils.hpp
src/fmm/: fmm.cpp  fmm.hpp  types.hpp
src/fmmpy/: __init__.py  __main__.py
src/pybind11_fmm/: __init__.py
src/pybind11_fmm/_core/: __init__.pyi
tests/: test_basic.py  test_fmm.py
