[build-system]
requires = ["scikit-build-core>=0.3.3", "nanobind"]
build-backend = "scikit_build_core.build"


[project]
name = "pybind11_fmm"
version = "0.0.3"
description="fmm with python binding"
readme = "README.md"
authors = [
  { name = "district10", email = "dvorak4tzx@gmail.com" },
]
dependencies = [
  "numpy",
]
requires-python = ">=3.9"
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

[project.optional-dependencies]
test = ["pytest"]

# docs: https://scikit-build-core.readthedocs.io/en/latest/configuration.html
[tool.scikit-build]
# Build stable ABI wheels for CPython 3.12+ (matches STABLE_ABI in CMakeLists.txt)
wheel.py-api = "cp312"
# cmake.build-type = "Debug"
# build-dir = "build/{wheel_tag}"

[tool.scikit-build.cmake.define]
# SOME_DEFINE = "ON"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
xfail_strict = true
log_cli_level = "INFO"
filterwarnings = [
  "error",
]
testpaths = ["tests"]


[tool.cibuildwheel]
build-verbosity = 1
# nanobind needs CPython; skip PyPy, musllinux and 32-bit builds.
# Skip free-threaded builds (cp3*t): incompatible with the stable ABI and not
# opted into via nanobind's FREE_THREADED mode.
skip = "pp* *musllinux* *_i686 cp3*t-*"
test-command = "pytest {project}/tests"
test-extras = ["test"]

# Needed for full C++17 support
[tool.cibuildwheel.macos.environment]
MACOSX_DEPLOYMENT_TARGET = "10.14"


[tool.ruff]
src = ["src"]

[tool.ruff.lint]
extend-select = [
  "B",           # flake8-bugbear
  "I",           # isort
  "ARG",         # flake8-unused-arguments
  "C4",          # flake8-comprehensions
  "EM",          # flake8-errmsg
  "ICN",         # flake8-import-conventions
  "G",           # flake8-logging-format
  "PGH",         # pygrep-hooks
  "PIE",         # flake8-pie
  "PL",          # pylint
  "PT",          # flake8-pytest-style
  "PTH",         # flake8-use-pathlib
  "RET",         # flake8-return
  "RUF",         # Ruff-specific
  "SIM",         # flake8-simplify
  "T20",         # flake8-print
  "UP",          # pyupgrade
  "YTT",         # flake8-2020
  "EXE",         # flake8-executable
  "NPY",         # NumPy specific rules
  "PD",          # pandas-vet
]
ignore = [
  "PLR09",    # Too many X
  "PLR2004",  # Magic comparison
]
isort.required-imports = ["from __future__ import annotations"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["T20"]
"**/*.pyi" = ["ICN001"]  # Allow non-standard imports in stub files (auto-generated)
